// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema
generator dbml {
  provider = "prisma-dbml-generator"
}

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "sqlite"
  url      = env("DATABASE_URL")
}

model Account {
  id           Int            @id @default(autoincrement())
  name         String
  email        String         @unique
  password     String
  avatar       String?
  role         String         @default("Employee") // Owner, Employee
  orders       Order[]
  employees    Account[]      @relation("OwnerEmployee")
  owner        Account?       @relation("OwnerEmployee", fields: [ownerId], references: [id], onDelete: SetNull, onUpdate: NoAction)
  ownerId      Int?
  refreshToken RefreshToken[]
  sockets      Socket[]
  createdAt    DateTime       @default(now())
  updatedAt    DateTime       @updatedAt
}

model RefreshToken {
  token     String   @id
  accountId Int
  account   Account  @relation(fields: [accountId], references: [id], onDelete: Cascade, onUpdate: NoAction)
  expiresAt DateTime
  createdAt DateTime @default(now())
}

model Dish {
  id            Int            @id @default(autoincrement())
  name          String
  price         Int
  description   String
  image         String
  status        String         @default("Active")

  dietaryTags     String?           // phân loại món ăn (chay, thuần chay, ít tinh bột) "vegetarian,vegan,low-carb"
  spicyLevel      Int?              @default(0) // độ cay món ăn 0-3 (0 = không cay, 3 = rất cay)
  preparationTime Int?              // Thời gian làm món (phút)
  searchKeywords  String?           // keyword tìm kiếm "phở bò beef noodle hà nội"
  popularity      Int?              @default(0) // Số lần order
  dishIngredients DishIngredient[]  // Relation mới

  menuItems     MenuItem[]
  createdAt     DateTime       @default(now())
  updatedAt     DateTime       @updatedAt
  categoryId    Int?
  category      DishCategory? @relation(fields: [categoryId], references: [id], onDelete: SetNull, onUpdate: NoAction)
}

// copy menuItem-dish tại thời điểm order đó được tạo thì dishSnapshot sẽ lưu lại thông tin món ăn
model DishSnapshot {
  id          Int      @id @default(autoincrement())
  name        String
  price       Int
  description String
  image       String
  status      String   @default("Available")
  menuItemId  Int?
  menuItem    MenuItem?    @relation(fields: [menuItemId], references: [id], onDelete: SetNull, onUpdate: NoAction)
  updatedAt   DateTime @updatedAt
  createdAt   DateTime @default(now())
  order       Order?
}

model Order {
  id             Int          @id @default(autoincrement())
  guestId        Int?
  guest          Guest?       @relation(fields: [guestId], references: [id], onDelete: SetNull, onUpdate: NoAction)
  table          Table?       @relation(fields: [tableNumber], references: [number], onDelete: SetNull, onUpdate: NoAction)
  tableNumber    Int?
  dishSnapshot   DishSnapshot @relation(fields: [dishSnapshotId], references: [id], onDelete: Cascade, onUpdate: Cascade)
  dishSnapshotId Int          @unique
  quantity       Int
  orderHandler   Account?     @relation(fields: [orderHandlerId], references: [id], onDelete: SetNull, onUpdate: NoAction)
  orderHandlerId Int?
  status         String       @default("Pending")
  createdAt      DateTime     @default(now())
  updatedAt      DateTime     @updatedAt
}

model Table {
  number    Int      @id
  capacity  Int
  orders    Order[]
  guests    Guest[]
  guestCalls GuestCall[]
  status    String   @default("Available")
  token     String
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model Guest {
  id                    Int       @id @default(autoincrement())
  name                  String
  table                 Table?    @relation(fields: [tableNumber], references: [number], onDelete: SetNull, onUpdate: NoAction)
  tableNumber           Int?

  dietaryPreferences    String?       // sở thích món ăn JSON: ["vegetarian","halal"]
  allergyInfo           String?       // dị ứng món ăn "shellfish, dairy, peanuts"
  chatHistory           ChatHistory[] // Relation
  guestCall             GuestCall[]   // Relation

  orders                Order[]
  refreshToken          String?
  refreshTokenExpiresAt DateTime?
  sockets               Socket[]
  createdAt             DateTime  @default(now())
  updatedAt             DateTime  @updatedAt
}

model Socket {
  socketId  String   @id
  accountId Int?     @unique
  account   Account? @relation(fields: [accountId], references: [id], onDelete: SetNull, onUpdate: NoAction)
  guestId   Int?     @unique
  guest     Guest?   @relation(fields: [guestId], references: [id], onDelete: SetNull, onUpdate: NoAction)
}

model DishCategory {
  id                   Int       @id @default(autoincrement())
  name                 String 
  description          String?
  createdAt            DateTime  @default(now())
  updatedAt            DateTime  @updatedAt
  dishes               Dish[]
}

model Menu {
  id          Int        @id @default(autoincrement())
  name        String
  description String?
  version     Int
  isActive    Boolean // Chỉ có một menu đang active tại một thời điểm
  menuItems   MenuItem[]
  createdAt   DateTime   @default(now())
  updatedAt   DateTime   @updatedAt
}

model MenuItem {
  id        Int      @id @default(autoincrement())
  menuId    Int
  menu      Menu     @relation(fields: [menuId], references: [id], onDelete: Restrict, onUpdate: NoAction)
  dishId    Int
  dish      Dish     @relation(fields: [dishId], references: [id], onDelete: Restrict, onUpdate: NoAction)
  price     Int
  status    String   @default("Available")  // ← THÊM: Available, OutOfStock, Hidden
  notes     String?
  dishSnapshots    DishSnapshot[]
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@unique([menuId, dishId])
}

model Ingredient {
  id              Int               @id @default(autoincrement())
  name            String            @unique // "Thịt bò"
  description     String?
  allergenType    String?           // các chất gây dị ứng "dairy,gluten,shellfish,nuts"
  isVegetarian    Boolean           @default(false) // chế độ chay
  isVegan         Boolean           @default(false) // chế độ thuần chay
  category        String?           // phân loại nguyên liệu "protein,vegetable,spice"
  image           String?           // hình ảnh nguyên liệu    
  dishIngredients DishIngredient[]
  isActive        Boolean           @default(true) // nguyên liệu còn sử dụng hay không
  createdAt       DateTime          @default(now())
  updatedAt       DateTime          @updatedAt
  
  @@index([allergenType])
}

model DishIngredient {
  id           Int        @id @default(autoincrement())
  dishId       Int
  dish         Dish       @relation(fields: [dishId], references: [id], onDelete: Cascade)
  ingredientId Int
  ingredient   Ingredient @relation(fields: [ingredientId], references: [id], onDelete: Cascade)
  quantity     String?    // số lượng "200", "2"
  unit         String?    // đơn vị "grams", "pieces"
  isOptional   Boolean    @default(false) // Có thể bỏ qua
  isMain       Boolean    @default(false) // Nguyên liệu chính
  createdAt    DateTime   @default(now())
  updatedAt    DateTime   @updatedAt
  
  @@unique([dishId, ingredientId])
  @@index([dishId])
  @@index([ingredientId])
}

model ChatHistory {
  id              Int      @id @default(autoincrement())
  sessionId       String   // UUID browser session
  guestId         Int?
  guest           Guest?   @relation(fields: [guestId], references: [id], onDelete: SetNull, onUpdate: NoAction)
  message         String   // Tin nhắn user
  response        String   // Phản hồi AI
  intent          String?  // "search_dish", "order_dish"
  extractedData   String?  // JSON
  suggestedDishes String?  // JSON: [dishId1, dishId2]
  responseTimeMs  Int?     // Performance tracking
  aiTokensUsed    Int?     // Chi phí API
  createdAt       DateTime @default(now())
  
  @@index([sessionId])
  @@index([guestId])
  @@index([createdAt])
}

model GuestCall {
  id          Int      @id @default(autoincrement())
  guestId     Int?
  guest       Guest?   @relation(fields: [guestId], references: [id], onDelete: SetNull, onUpdate: NoAction)
  tableNumber Int?
  table       Table?   @relation(fields: [tableNumber], references: [number], onDelete: SetNull, onUpdate: NoAction)
  status      String   @default("Pending") // "Pending", "Completed", 
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt

  @@index([guestId])
  @@index([tableNumber])
  @@index([status])
  @@index([createdAt])
}