//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Account {
  id Int [pk, increment]
  name String [not null]
  email String [unique, not null]
  password String [not null]
  avatar String
  role String [not null, default: 'Employee']
  orders Order [not null]
  employees Account [not null]
  owner Account
  ownerId Int
  refreshToken RefreshToken [not null]
  sockets Socket [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table RefreshToken {
  token String [pk]
  accountId Int [not null]
  account Account [not null]
  expiresAt DateTime [not null]
  createdAt DateTime [default: `now()`, not null]
}

Table Dish {
  id Int [pk, increment]
  name String [not null]
  price Int [not null]
  description String [not null]
  image String [not null]
  status String [not null, default: 'Active']
  dietaryTags String
  spicyLevel Int [default: 0]
  preparationTime Int
  searchKeywords String
  popularity Int [default: 0]
  dishIngredients DishIngredient [not null]
  menuItems MenuItem [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  categoryId Int
  category DishCategory
}

Table DishSnapshot {
  id Int [pk, increment]
  name String [not null]
  price Int [not null]
  description String [not null]
  image String [not null]
  status String [not null, default: 'Available']
  menuItemId Int
  menuItem MenuItem
  updatedAt DateTime [not null]
  createdAt DateTime [default: `now()`, not null]
  order Order
}

Table Order {
  id Int [pk, increment]
  guestId Int
  guest Guest
  table Table
  tableNumber Int
  dishSnapshot DishSnapshot [not null]
  dishSnapshotId Int [unique, not null]
  quantity Int [not null]
  orderHandler Account
  orderHandlerId Int
  status String [not null, default: 'Pending']
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Table {
  number Int [pk]
  capacity Int [not null]
  orders Order [not null]
  guests Guest [not null]
  guestCalls GuestCall [not null]
  status String [not null, default: 'Available']
  token String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Guest {
  id Int [pk, increment]
  name String [not null]
  table Table
  tableNumber Int
  dietaryPreferences String
  allergyInfo String
  chatHistory ChatHistory [not null]
  guestCall GuestCall [not null]
  orders Order [not null]
  refreshToken String
  refreshTokenExpiresAt DateTime
  sockets Socket [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Socket {
  socketId String [pk]
  accountId Int [unique]
  account Account
  guestId Int [unique]
  guest Guest
}

Table DishCategory {
  id Int [pk, increment]
  name String [not null]
  description String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  dishes Dish [not null]
}

Table Menu {
  id Int [pk, increment]
  name String [not null]
  description String
  version Int [not null]
  isActive Boolean [not null]
  menuItems MenuItem [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table MenuItem {
  id Int [pk, increment]
  menuId Int [not null]
  menu Menu [not null]
  dishId Int [not null]
  dish Dish [not null]
  price Int [not null]
  status String [not null, default: 'Available']
  notes String
  dishSnapshots DishSnapshot [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]

  indexes {
    (menuId, dishId) [unique]
  }
}

Table Ingredient {
  id Int [pk, increment]
  name String [unique, not null]
  description String
  allergenType String
  isVegetarian Boolean [not null, default: false]
  isVegan Boolean [not null, default: false]
  category String
  image String
  dishIngredients DishIngredient [not null]
  isActive Boolean [not null, default: true]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table DishIngredient {
  id Int [pk, increment]
  dishId Int [not null]
  dish Dish [not null]
  ingredientId Int [not null]
  ingredient Ingredient [not null]
  quantity String
  unit String
  isOptional Boolean [not null, default: false]
  isMain Boolean [not null, default: false]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]

  indexes {
    (dishId, ingredientId) [unique]
  }
}

Table ChatHistory {
  id Int [pk, increment]
  sessionId String [not null]
  guestId Int
  guest Guest
  message String [not null]
  response String [not null]
  intent String
  extractedData String
  suggestedDishes String
  responseTimeMs Int
  aiTokensUsed Int
  createdAt DateTime [default: `now()`, not null]
}

Table GuestCall {
  id Int [pk, increment]
  guestId Int
  guest Guest
  tableNumber Int
  table Table
  status String [not null, default: 'Pending']
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Ref: Account.ownerId > Account.id

Ref: RefreshToken.accountId > Account.id [delete: Cascade]

Ref: Dish.categoryId > DishCategory.id [delete: Set Null]

Ref: DishSnapshot.menuItemId > MenuItem.id [delete: Set Null]

Ref: Order.guestId > Guest.id [delete: Set Null]

Ref: Order.tableNumber > Table.number [delete: Set Null]

Ref: Order.dishSnapshotId - DishSnapshot.id [delete: Cascade]

Ref: Order.orderHandlerId > Account.id [delete: Set Null]

Ref: Guest.tableNumber > Table.number [delete: Set Null]

Ref: Socket.accountId > Account.id [delete: Set Null]

Ref: Socket.guestId > Guest.id [delete: Set Null]

Ref: MenuItem.menuId > Menu.id [delete: Restrict]

Ref: MenuItem.dishId > Dish.id [delete: Restrict]

Ref: DishIngredient.dishId > Dish.id [delete: Cascade]

Ref: DishIngredient.ingredientId > Ingredient.id [delete: Cascade]

Ref: ChatHistory.guestId > Guest.id [delete: Set Null]

Ref: GuestCall.guestId > Guest.id [delete: Set Null]

Ref: GuestCall.tableNumber > Table.number [delete: Set Null]